--- a/index.html
+++ b/index.html
@@ -40,42 +40,42 @@
         <div class="row">
             <div class="col-12">
                 <img class="img-fluid rounded-circle my-5" style="width: 200px; height: 200px;"
-                    src="./pictures/Guney_unay.jpg" alt="Guney Unay">
+                    src="./web/pictures/Guney_unay.jpg" alt="Guney Unay">
             </div>
         </div>
         <div class="row">
             <div class="col-12">
                 <h3 style="font-family: 'Gloria Hallelujah', cursive;" class="text-center display-4">Hi!</h3>
-                <p class="text-center m-4">I'm a web developer. I love to create new websites.If you want to announce
-                    yourself
-                    in the language
-                    of the internet, you can <a href="#"> <span
-                            style="font-family:'Gloria Hallelujah', cursive ;margin: 3px;"> contact me!</span></a> </p>
+                <p class="text-center m-4">I'm a web developer. I love creating new websites. If you want to have a
+                    website,<a class="btn" href="mailto:unaygney17@gmail.com"><span
+                            style="font-family:'Gloria Hallelujah', cursive;">contact me!</span></a> </p>
             </div>
         </div>
+        <!-- Section 2 -->
 
         <div class="row m-5 text-center">
             <div class="col-12 m-3 ">
                 <h3 class="m-5" style="font-family:'Gloria Hallelujah', cursive ;">My Education</h3>
             </div>
-
-            <div class="col-4 col-sm-12 col-md-6 ">
-                <img src="./pictures/education.jpg" class="rounded float-sm-center" alt="Education.png">
-            </div>
-            <div class="col-8 col-sm-12 col-md-6 py-5 ">
-                <h4 class="col-sm-12">University of Yalova - International Trade And Finance</h4>
-                <p class="p-3 m-2">I graduated at thebachelor's degree level. 2017-2022</p>
+            <div class="row">
+                <div class="col-12 col-md-4 ">
+                    <img src="./web/pictures/education.jpg" class="rounded float-sm-center" alt="Education.png">
+                </div>
+                <div class="col-12 col-md-8 py-5 ">
+                    <h4 class="h4">University of Yalova - International Trade And Finance</h4>
+                    <p class="p-3 m-2">I graduated at the bachelor's degree level. <small>2017-2022</small></p>
+                </div>
             </div>
         </div>
 
         <div class="row m-5 text-center m-3">
 
 
-            <div class="col-4 col-sm-12 col-md-6">
-                <img src="./pictures/education2.jpg" class="rounded float-sm-center m-5" alt="Education.png">
+            <div class="col-12 col-md-4">
+                <img src="./web/pictures/education2.jpg" class="rounded float-sm-center m-5" alt="Education.png">
             </div>
-            <div class="col-8 col-sm-12 col-md-6 py-5 ">
-                <h4>Istinye University - Computer Technologies</h4>
+            <div class="col-12 col-md-8 py-5 ">
+                <h4 class="h4">Istinye University - Computer Technologies</h4>
                 <p class="p-3 m-2 ">I won a full scholarship in 2022. I am still a student.</p>
             </div>
         </div>
@@ -90,9 +90,9 @@
 <footer>
     <div class="container">
         <div class="box-content">
-            <a href="">Instagram</a>
-            <a href="">Twitter</a>
-            <a href="">Linkedln</a>
+            <a target="_blank" href="https://www.instagram.com/guneyunay">Instagram</a>
+            <a target="_blank" href="https://twitter.com/guneyunay">Twitter</a>
+            <a target="_blank" href="https://www.linkedin.com/in/g%C3%BCney-unay-97ab96235">Linkedln</a>
         </div>
     </div>
 
