--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-12">
                 <img class="img-fluid rounded-circle my-5" style="width: 200px; height: 200px;"
-                    src="./web/pictures/Guney_unay.jpg" alt="Guney Unay">
+                    src="./pictures/Guney_unay.jpg" alt="Guney Unay">
             </div>
         </div>
         <div class="row">
@@ -59,7 +59,7 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-4 ">
-                    <img src="./web/pictures/education.jpg" class="rounded float-sm-center" alt="Education.png">
+                    <img src="./pictures/education.jpg" class="rounded float-sm-center" alt="Education.png">
                 </div>
                 <div class="col-12 col-md-8 py-5 ">
                     <h4 class="h4">University of Yalova - International Trade And Finance</h4>
@@ -72,7 +72,7 @@
 
 
             <div class="col-12 col-md-4">
-                <img src="./web/pictures/education2.jpg" class="rounded float-sm-center m-5" alt="Education.png">
+                <img src="./pictures/education2.jpg" class="rounded float-sm-center m-5" alt="Education.png">
             </div>
             <div class="col-12 col-md-8 py-5 ">
                 <h4 class="h4">Istinye University - Computer Technologies</h4>
