--- a/index.html
+++ b/index.html
@@ -5,108 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My personal site.">
+    <meta name="keywords" content="SEO, HTML, CSS, Web , Site, Güney , Unay , Guney Unay ,unaygney , frondend, ">
+    <meta name="robots" content="index, follow">
     <title>Guney Unay | Web Developer </title>
+    <!-- Icon -->
+    <link rel="icon" type="image/svg+xml" href="./pictures/favicon.svg">
     <!-- Css sheet -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./dist/css/main.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Merriweather:wght@400;700&display=swap"
-        rel="stylesheet">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<!-- hero -->
-<header>
-    <div class="container-fluid">
-        <div class="context">
-            <h1 class="display-2">I'm Guney</h1>
-            <p>a web developer. </p>
-            <svg xmlns="http://www.w3.org/2000/svg" style="color: #9BA4B5;" width="40" height="40" fill="currentColor"
-                class="bi bi-code-slash" viewBox="0 0 16 16">
-                <path
-                    d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z" />
-            </svg>
-        </div>
-
-    </div>
-</header>
-<!-- hero finish -->
-<!-- Article -->
-<article>
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-12">
-                <img class="img-fluid rounded-circle my-5" style="width: 200px; height: 200px;"
-                    src="./pictures/Guney_unay.jpg" alt="Guney Unay">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <h3 style="font-family: 'Gloria Hallelujah', cursive;" class="text-center display-4">Hi!</h3>
-                <p class="text-center m-4">I'm a web developer. I love creating new websites. If you want to have a
-                    website,<a class="btn" href="mailto:unaygney17@gmail.com"><span
-                            style="font-family:'Gloria Hallelujah', cursive;">contact me!</span></a> </p>
-            </div>
-        </div>
-        <!-- Section 2 -->
-
-        <div class="row m-5 text-center">
-            <div class="col-12 m-3 ">
-                <h3 class="m-5" style="font-family:'Gloria Hallelujah', cursive ;">My Education</h3>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-4 ">
-                    <img src="./pictures/education.jpg" class="rounded float-sm-center" alt="Education.png">
-                </div>
-                <div class="col-12 col-md-8 py-5 ">
-                    <h4 class="h4">University of Yalova - International Trade And Finance</h4>
-                    <p class="p-3 m-2">I graduated at the bachelor's degree level. <small>2017-2022</small></p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row m-5 text-center m-3">
-
-
-            <div class="col-12 col-md-4">
-                <img src="./pictures/education2.jpg" class="rounded float-sm-center m-5" alt="Education.png">
-            </div>
-            <div class="col-12 col-md-8 py-5 ">
-                <h4 class="h4">Istinye University - Computer Technologies</h4>
-                <p class="p-3 m-2 ">I won a full scholarship in 2022. I am still a student.</p>
-            </div>
-        </div>
-
-
-
-
-    </div>
-
-</article>
-
-<footer>
-    <div class="container">
-        <div class="box-content">
-            <a target="_blank" href="https://www.instagram.com/guneyunay">Instagram</a>
-            <a target="_blank" href="https://twitter.com/guneyunay">Twitter</a>
-            <a target="_blank" href="https://www.linkedin.com/in/g%C3%BCney-unay-97ab96235">Linkedln</a>
-        </div>
-    </div>
-
-    <div style="background-color:#212A3E ;" class="copyright text-center">
-        <p style="color: #9BA4B5; font-size: 0.7rem;">Guney Unay | © all rights reserved</p>
-    </div>
-</footer>
-
-
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
+
+    <header class="header">
+
+        <aside class="side-bar">
+            <img class="sidebar-pic" src="./pictures/Guney_unay.jpeg" alt="">
+        </aside>
+
+
+        <article>
+            <div class="content">
+                <h1>Guney <span>Unay</span></h1>
+                <p>Frond-End Developer.  For information : <a href="mailto:gneyunay@gmail.com">gneyunay@gmail.com</a>
+                </p>
+                <nav>
+                    <ul>
+                        <li><a target="_blank"  href="https://www.instagram.com/guneyunay/"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a target="_blank"  href="https://twitter.com/guneyunay"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a target="_blank"  href="https://github.com/unaygney"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a target="_blank"  href="https://www.linkedin.com/in/g%C3%BCney-unay-97ab96235/"><i class="fa-brands fa-linkedin"></i></a></li>
+                    </ul>
+                </nav>
+            </div>
+
+
+
+
+        </article>
+
+
+    </header>
+
 </body>
 
 </html>
